# RoboTransfer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  main.py  paths.py  pyproject.toml  train_robotransfer.py  train_robotransfer.sh
diffusers/src/diffusers/models/transformers/: transformer_temporal.py
diffusers/src/diffusers/models/unets/: unet_3d_blocks.py  unet_spatio_temporal_condition.py
robotransfer/: __init__.py
robotransfer/loss/: edm_loss.py
robotransfer/models/: guider.py  robotransfer_pipeline.py
robotransfer/utils/: __init__.py  base_dataset.py  default_collator.py  default_sampler.py  image_loading.py  lmdb_dataset.py  load_sample.py  save_video.py
script/: process_real.sh  process_sim.sh  run_mono_normal.py  run_video_depth.py  sim2images.py
