[project]
name = "robotransfer"
version = "0.1.0"
description = "Geometry-Consistent Video Diffusion for Robotic Visual Policy Transfer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=4.0.0",
    "diffusers>=0.34.0",
    "einops>=0.8.1",
    "imageio[ffmpeg]>=2.37.0",
    "opencv-python-headless>=4.12.0.88",
    "torch>=2.7.1",
    "transformers>=4.53.1",
]

[project.optional-dependencies]
data = [
    "easydict>=1.13",
    "h5py>=3.14.0",
    "matplotlib>=3.10.3",
    "tensorboard>=2.20.0",
    "torchvision>=0.22.1",
    "xformers>=0.0.31.post1",
]

[tool.setuptools.packages.find]
where = ["robotransfer"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.4",
]
